--- a/us/hall/qcapp/split.fxml
+++ b/us/hall/qcapp/split.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -51,20 +52,7 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" />
                                  </VBox.margin>
                               </TextField>
-                              <Label text="Class Name">
-                                 <font>
-                                    <Font name="System Bold" size="14.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets bottom="5.0" left="10.0" right="20.0" top="20.0" />
-                                 </VBox.margin>
-                              </Label>
-                              <TextField fx:id="className" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" />
-                                 </VBox.margin>
-                              </TextField>
-                              <CheckBox mnemonicParsing="false" text="Render">
+                              <CheckBox fx:id="renderOpt" mnemonicParsing="false" text="Render">
                                  <VBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </VBox.margin>
@@ -85,6 +73,39 @@
                                     <Insets bottom="10.0" left="10.0" right="10.0" />
                                  </VBox.margin>
                               </TextField>
+                              <Separator prefWidth="200.0">
+                                 <opaqueInsets>
+                                    <Insets bottom="5.0" top="5.0" />
+                                 </opaqueInsets>
+                              </Separator>
+                              <Label text="Strange Java">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label text="Class Name">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets bottom="5.0" left="10.0" right="20.0" top="20.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <TextField fx:id="className" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" />
+                                 </VBox.margin>
+                              </TextField>
+                              <Separator prefWidth="200.0">
+                                 <opaqueInsets>
+                                    <Insets bottom="5.0" top="5.0" />
+                                 </opaqueInsets>
+                              </Separator>
+                              <Label alignment="BOTTOM_LEFT" text="Qiskit Python">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                              </Label>
                            </children>
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" />
